--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@prisma/client": "^6.7.0",
     "@supabase/supabase-js": "^2.49.4",
     "@types/uuid": "^10.0.0",
+    "add": "^2.0.6",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "nodemailer": "^7.0.6",
+    "pnpm": "^10.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
